# Umbra

./: .dockerignore  .env.example  .env.example.backup  .env.python.example  .eslintrc.js  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DOCKERFILE_README.md  Dockerfile  INSTANCES_REGISTRY.md  INSTANCE_MANAGEMENT.md  MVP_README.md  PHASE1_SUMMARY.md  PROJECT_MAP.md  PYTHON_CONVERSION_SUMMARY.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  README_OLD.md  assessment_plan.py  bot2_demo.py  bot_mvp.py  circuit_breaker_retry.md  debug_routing.py  demo_mvp.py  demo_r2_simple.py  demo_r2_storage.py  demo_security_observability.py  docker-compose.yml  f4r2_integration_test.py  f4r2_validate.py  main.py  package-lock.json  package.json  production_pipeline.md  railway-python.json  railway.json  railway.toml  (+14 more)
.github/: README.md
UMBRA/: ACTION_PLAN.md  ARCHITECTURE.md  LICENSE  main.py  pyproject.toml  requirements.txt
demos/: f4r2_demo.py
docs/: F3R1_README.md  F4R2_README.md  PROJECT_MAP.md  R2_STORAGE_README.md  deployment.md  railway-deployment.md
python_services/: README.md  test_services.py
python_services/finance/: Dockerfile  pyproject.toml  requirements.txt
python_services/finance/finance_service/: __init__.py  main.py
python_services/finance/finance_service/extraction/: __init__.py  finance_extractor.py
python_services/finance/finance_service/ocr/: __init__.py  ocr_processor.py
python_services/finance/finance_service/reports/: report_generator.py
python_services/shared/: pyproject.toml
python_services/shared/umbra_shared/: __init__.py  logger.py  middleware.py  openrouter_client.py  retry.py  storage_client.py  telegram_client.py  types.py
python_services/umbra/: Dockerfile  pyproject.toml  requirements.txt
python_services/umbra/umbra_service/: __init__.py  main.py
python_services/umbra/umbra_service/handlers/: __init__.py  task_executor.py
python_services/umbra/umbra_service/routing/: __init__.py  intent_classifier.py  module_router.py
python_services/umbra/umbra_service/telegram/: __init__.py  telegram_handler.py
scripts/: build.sh  init_dev_database.py  quickstart.py  test_modules.py  validate_branch_setup.py  verify-deployment.sh  verify-railway-config.sh
shared/: package.json  tsconfig.json  tsconfig.tsbuildinfo
tests/: __init__.py  test_ai_agent_f3r1.py  test_audit.py  test_bootstrap.py  test_bot2.py  test_c2_update_watcher.py  test_c3_instances.py  test_config.py  test_f1.py  test_f2.py  test_f3r1_integration.py  test_f4r2_integration.py  test_general_chat.py  test_health.py  test_logging.py  test_manifest_manager.py  test_metrics.py  test_mvp.py  (+9 more)
(+231 files in other folders)
