[project]
name = "umbra-finance"
version = "1.0.0"
description = "Finance Module - OCR processing and financial document extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pillow>=10.1.0",
    "pytesseract>=0.3.10",
    "pypdf2>=3.0.1",
    "pdf2image>=1.16.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "umbra-shared @ file:../shared",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["finance_service*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
finance-service = "finance_service.main:run"