[project]
name = "umbra-shared"
version = "1.0.0"
description = "Shared utilities and types for Umbra bot system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "boto3>=1.34.0",
    "paramiko>=3.4.0",
    "python-telegram-bot>=20.7",
    "pillow>=10.1.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "structlog>=23.2.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["umbra_shared*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]